styling and left section

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5730,8 +5730,51 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+html, body {
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+  font-weight: 100;
+  font-family: 'Lato', sans-serif; }
+
+.container {
+  width: 100%;
+  height: 100%; }
+
+#main-content {
+  width: 100%;
+  height: 100%; }
+
+#right-content {
+  position: absolute;
+  top: 80px;
+  left: 250px;
+  right: 0px;
+  bottom: 0px;
+  padding: 15px; }
+
+#left-content {
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  bottom: 0px;
+  width: 250px;
+  padding: 15px; }
+
+#header {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  height: 80px;
+  width: 100%;
+  text-align: center; }
+
 #map-canvas {
-  width: 400px;
-  height: 400px; }
+  height: 100%;
+  width: 100%; }
+
+.title {
+  font-size: 25px; }
 
 /*# sourceMappingURL=app.css.map */
