--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,6 +35,7 @@ html, body {
     bottom: 0px;
     width:$left-content-width;
     padding:$content-horiz-padding;
+    font-size:12px;
 }
 #header{
   position: absolute;    
