--- a/public/app/modal-container.component.html
+++ b/public/app/modal-container.component.html
@@ -5,8 +5,9 @@
                 <button type="button" class="close" data-dismiss="modal" (click)="hideModalContainer()">&times;</button>
                 <h4 class="modal-title">{{title}}</h4>
             </div>
+            <!-- using non sugar syntax with tempaltes. TODO:NW figure out how to just use dynamic component name -->
             <div class="modal-body" [ngSwitch]="contentType">
-                <template ngSwitchCase="edit_section"><section-update-form></section-update-form></template>
+                <template ngSwitchCase="edit_section"><section-update-form [section]="selectedSection"></section-update-form></template>
                 <template ngSwitchCase="simple_string">{{contentString}}</template>
             </div>
             <div class="modal-footer">
