--- a/public/app/section-update-form.component.html
+++ b/public/app/section-update-form.component.html
@@ -1,3 +1,3 @@
 <div>ID: {{section.id}}</div>
 <div>Notes: {{section.notes}}</div>
-<div>Parking Type: {{section.main_parking_type_id}}</div>
+<div>Parking Type: {{section.main_parking_type_id | nameForPtypeId}}</div>
