--- a/public/app/templates/modal-container.component.html
+++ b/public/app/templates/modal-container.component.html
@@ -6,9 +6,9 @@
                 <h4 class="modal-title">{{title}}</h4>
             </div>
             <!-- using non sugar syntax with tempaltes. TODO:NW figure out how to just use dynamic component name -->
-            <div class="modal-body" [ngSwitch]="contentType">
-                <template ngSwitchCase="edit_section"><section-update-form [model]="selectedSection"></section-update-form></template>
-                <template ngSwitchCase="simple_string">{{contentString}}</template>
+            <div class="modal-body" [ngSwitch]="componentName">
+                <template ngSwitchCase="section-update-form"><section-update-form [model]="selectedSection"></section-update-form></template>
+                <template ngSwitchCase="section-info"><section-info [model]="selectedSection"></section-info></template>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" (click)="hideModalContainer()">Close</button>
