--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5778,4 +5778,8 @@ html, body {
 .title {
   font-size: 25px; }
 
+#hours-table-container td, #hours-table-container th {
+  padding: 0px 4px 4px 4px;
+  font-size: 12px; }
+
 /*# sourceMappingURL=app.css.map */
