--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,3 +56,5 @@ html, body {
     font-size: 25px;
 }
 
+#hours-table-container td, #hours-table-container th{ padding:0px 4px 4px 4px; font-size:12px;}
+
