--- a/public/app/templates/modal-container.component.html
+++ b/public/app/templates/modal-container.component.html
@@ -7,7 +7,11 @@
             </div>
             <!-- using non sugar syntax with tempaltes. TODO:NW figure out how to just use dynamic component name -->
             <div class="modal-body" [ngSwitch]="componentName">
-                <template ngSwitchCase="section-update-form"><section-update-form [model]="selectedSection"></section-update-form></template>
+                <template ngSwitchCase="section-update-form">
+                    <section-update-form [model]="selectedSection"
+                        (onDeleteComplete)="hideModalContainerWithMessage($event)">
+                    </section-update-form>
+                </template>
                 <template ngSwitchCase="section-info"><section-info [model]="selectedSection"></section-info></template>
             </div>
             <div class="modal-footer">
