--- a/public/app/templates/section-update-form.component.html
+++ b/public/app/templates/section-update-form.component.html
@@ -17,7 +17,6 @@
         </div>
         <label for="power">Time Limited?</label>
         <select id="mainShortTermMin"
-                required
                 [(ngModel)]="model.mainShortTermMin" name="mainShortTermMin" 
                 #mainShortTermMin="ngModel" >
           <option *ngFor="let t of pTimes" [value]="t.time">{{t.label}}</option>
@@ -42,7 +41,8 @@
                [(ngModel)]="model.notes" name="notes" >
       </div>
       <button type="submit" class="btn btn-default" [disabled]="!sectionForm.form.valid">Submit</button>
-      <button type="submit" class="btn btn-default">New Map Line</button>
+      <button type="button" class="btn btn-default" (click)="deleteSection()">Delete</button>
+      <button type="button" class="btn btn-default">New Map Line</button>
       <!--<button type="button" class="btn btn-default" (click)="newSection()">New Section</button>-->
     </form>
   </div>
@@ -51,7 +51,7 @@
     <p><strong>Form submitted:</strong></p>
     <div class="row">
       <div class="col-xs-3">Saving ...</div>
-      <div class="col-xs-9  pull-left">Server Response:</div>
+      <div class="col-xs-9 pull-left">Server Response:</div>
     </div>
     <br>
     <button class="btn btn-default" (click)="submitted=false">Edit</button>
