icon updates, default form vals, and default server ave vals

--- a/public/app/templates/section-info.component.html
+++ b/public/app/templates/section-info.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-3">
     <div>ID: {{model.id}}</div>
     <div>Parking Type: {{model.mainParkingTypeId | nameForPtypeId}}</div>
-    <p>Hour Restrictions: Yes/No</p>
+    <p>Hours?: Yes/No</p>
   </div>
   <div class="col-xs-9 pull-left">
     <div [innerHTML]="model.hoursHtml" id="hours-table-container"></div>
