--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5782,4 +5782,25 @@ html, body {
   padding: 0px 4px 4px 4px;
   font-size: 12px; }
 
+.controls {
+  margin-top: 10px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); }
+
+#search-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 300px;
+  display: none; }
+
 /*# sourceMappingURL=app.css.map */
