--- a/public/app/templates/section-update-form.component.html
+++ b/public/app/templates/section-update-form.component.html
@@ -1,5 +1,13 @@
 
-<section-info [model]="model"></section-info>
+<div class="row">
+  <div class="col-xs-2">
+    <div>ID: {{model.id}}</div>
+    <div>New Hrs:?</div>
+  </div>
+  <div class="col-xs-10 pull-left">
+    <div [innerHTML]="model.hoursHtml" id="hours-table-container"></div>
+  </div>
+</div>
 <div class="container">
   <div [hidden]="submitted">
     <form *ngIf="active" (ngSubmit)="onSubmit()" #sectionForm="ngForm">
@@ -36,9 +44,15 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="notes">Notes</label>
-        <input type="text" class="form-control" id="notes"
+        <label for="notes">Notes: </label>
+        <input type="text" class="" id="notes" style="width:250px;"
                [(ngModel)]="model.notes" name="notes" >
+        <label for="notes">Hours: </label>
+        <select id="hoursType"
+                [(ngModel)]="model.hoursType" name="hoursType" 
+                #streetSide="ngModel" >
+          <option *ngFor="let t of hoursTypes" [value]="t.value">{{t.label}}</option>
+        </select>
       </div>
       <button type="submit" class="btn btn-default" [disabled]="!sectionForm.form.valid">Submit</button>
       <button type="button" class="btn btn-default" (click)="deleteSection()">Delete</button>
