--- a/public/app/templates/point-update-form.html
+++ b/public/app/templates/point-update-form.html
@@ -11,18 +11,31 @@
   <div [hidden]="submitted">
     <form *ngIf="active" (ngSubmit)="onSubmit()" #pointForm="ngForm">
       <div>
-        <label for="mainParkingTypeId">Parking Type</label>
+        <label for="mainParkingTypeId">Parking</label>
         <select id="mainParkingTypeId"
                 required
                 [(ngModel)]="model.mainParkingTypeId" name="mainParkingTypeId" 
                 #mainParkingTypeId="ngModel" >
-          <option *ngFor="let type of pTypes" [value]="type.id">{{type.name}}</option>
+          <option *ngFor="let type of pkTypes" [value]="type.id">{{type.name}}</option>
         </select>
         <div [hidden]="mainParkingTypeId.valid || mainParkingTypeId.pristine" 
              class="alert alert-danger">
           Parking Type is required
         </div>
-        <label for="power">Time Limited?</label>
+
+        <label for="pointTypeId">Point</label>
+        <select id="pointTypeId"
+                required
+                [(ngModel)]="model.pointTypeId" name="pointTypeId" 
+                #pointTypeId="ngModel" >
+          <option *ngFor="let type of ptTypes" [value]="type.id">{{type.name}}</option>
+        </select>
+        <div [hidden]="pointTypeId.valid || pointTypeId.pristine" 
+             class="alert alert-danger">
+          Point Type is required
+        </div>
+
+        <label for="power">Time Limit?</label>
         <select id="mainShortTermMin"
                 [(ngModel)]="model.mainShortTermMin" name="mainShortTermMin" 
                 #mainShortTermMin="ngModel" >
