--- a/public/app/templates/section-update-form.html
+++ b/public/app/templates/section-update-form.html
@@ -54,6 +54,11 @@
           <option *ngFor="let t of hoursTypes" [value]="t.value">{{t.label}}</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="hoursCustom">Custom Hours: </label>
+        <input type="text" class="" id="hoursCustom" style="width:250px;"
+               [(ngModel)]="model.hoursCustom" name="hoursCustom" >
+      </div>
       <button type="submit" class="btn btn-default" [disabled]="!sectionForm.form.valid">Submit</button>
       <button type="button" class="btn btn-default" (click)="deleteSection()">Delete</button>
     </form>
